terraform/modules/smartgrid-core/instances.tf
#################################################
# EC2 Bastion & Auto Scaling Group
#################################################

# 1. Bastion Host (Public Access for maintenance)
resource "aws_instance" "bastion" {
  count                       = var.enable_bastion ? 1 : 0
  ami                         = "ami-07a00cf47dbbc844c"
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public_a.id
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.bastion_sg.id]
  iam_instance_profile        = aws_iam_instance_profile.backend_profile.name

  tags = {
    Name = "smartgrid-${var.environment}-bastion"
  }
}
